--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "@inertiajs/react": "^2.0.3"
+        "@inertiajs/react": "^2.0.3",
+        "@radix-ui/react-slot": "^1.1.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.475.0",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
