--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "@radix-ui/react-slot": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.4.1",
         "lucide-react": "^0.475.0",
+        "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7"
     }
