create project and service component

--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.5.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.3",
         "@radix-ui/react-slot": "^1.1.2",
+        "@react-three/drei": "^9.121.4",
+        "@react-three/fiber": "^8.17.14",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.4.1",
         "lucide-react": "^0.475.0",
         "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "three": "^0.173.0"
     }
 }
