--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "clsx": "^2.1.1",
         "framer-motion": "^12.4.1",
         "lucide-react": "^0.475.0",
+        "react-beautiful-dnd": "^13.1.1",
         "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
