--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
-        "three": "^0.173.0"
+        "three": "^0.173.0",
+        "use-sound": "^4.0.3"
     }
 }
