add toastify notification

--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
         "framer-motion": "^12.4.1",
         "lucide-react": "^0.475.0",
         "react-beautiful-dnd": "^13.1.1",
+        "react-toastify": "^11.0.3",
         "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss-animate": "^1.0.7",
         "three": "^0.173.0",
+        "toastify": "^2.0.1",
         "use-sound": "^4.0.3"
     }
 }
