--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "framer-motion": "^12.4.1",
         "lucide-react": "^0.475.0",
         "react-beautiful-dnd": "^13.1.1",
+        "react-flip-page": "^1.6.4",
+        "react-pageflip": "^2.0.3",
         "react-toastify": "^11.0.3",
         "swiper": "^11.2.2",
         "tailwind-merge": "^3.0.1",
