download helmet for security in react js

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "lucide-react": "^0.475.0",
         "react-beautiful-dnd": "^13.1.1",
         "react-flip-page": "^1.6.4",
+        "react-helmet": "^6.1.0",
         "react-pageflip": "^2.0.3",
         "react-toastify": "^11.0.3",
         "swiper": "^11.2.2",
