--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-sitemap": "^7.3",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
