post blog automatically in my linkedin page

--- a/.env.example
+++ b/.env.example
@@ -63,4 +63,11 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+LINKEDIN_ACCESS_TOKEN=
+LINKEDIN_AUTHOR=
+LINKEDIN_CLIENT_ID=78m649d9pk99cn
+LINKEDIN_CLIENT_SECRET=WPL_AP1.6BzmEoMCaiEK6ukP.NtZkVg==
+LINKEDIN_REDIRECT_URI=https://zobirofkir.com
+LINKEDIN_COMPANY_ID=107763258
+
 VITE_APP_NAME="${APP_NAME}"
